@startuml

title __ENTITIES's Class Diagram__\n

  namespace com.lukire.entity {
    namespace entities {
      class com.lukire.entity.entities.Cannon {
          ~ angle : float
          {static} ~ size : int
          + draw()
          + getElasticity()
          + getHitbox()
          + getMass()
          + setAngle()
          + shootCannonBall()
      }
    }
  }
  

  namespace com.lukire.entity {
    namespace entities {
      class com.lukire.entity.entities.CannonBall {
          + draw()
          + getBlastStrength()
          + getElasticity()
          + getHitbox()
          + getMass()
      }
    }
  }
  

  com.lukire.entity.entities.Cannon .up.|> com.lukire.entity.attributes.EntityCollision
  com.lukire.entity.entities.Cannon -up-|> com.lukire.entity.Entity
  com.lukire.entity.entities.CannonBall .up.|> com.lukire.entity.attributes.EntityExplosive
  com.lukire.entity.entities.CannonBall -up-|> com.lukire.entity.types.Projectile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
